# modern-cmake-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  azure-pipelines.yml
app/: CMakeLists.txt  main.cpp
app/src/: main.cpp
libs/: CMakeLists.txt
libs/lib1/: CMakeLists.txt  lib1-priv-header.h  lib1-priv-impl.cpp  lib1-pub-impl.cpp
libs/lib1/include/: lib1-pub-header.h
libs/lib1/include/lib1/: lib1-pub-header.h
libs/lib1/src/: lib1-priv-header.h  lib1-priv-impl.cpp
libs/lib1/tests/: CMakeLists.txt  main.cpp
